--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "roostergrin-front-end-dev-test",
   "version": "1.0.0",
   "description": "Test",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --port $PORT",
+    "start": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,20 +18,25 @@
   },
   "homepage": "https://github.com/roostergrin/front-end-dev-test",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.15.0",
-    "webpack-dev-server": "^3.3.1",
     "autoprefixer": "^9.5.1",
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "exports-loader": "^0.7.0",
+    "express": "^4.17.1",
     "html-loader": "^0.5.5",
+    "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
+    "nodemon": "^2.0.4",
+    "popper.js": "^1.15.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
